# reqs-helper

./: .env.example  Procfile  pyproject.toml  requirements.txt
.claude/: settings.local.json
claude_util/: __main__.py  cli.py  cto_agent.py  prompts.py
claude_util/web/: __init__.py  agent_async.py  app.py  gantt.py  pdf_export.py  routes.py  session.py  ws_handler.py
claude_util/web/static/: app.js  index.html  style.css
tests/: test_cto_agent.py
